--- a/src/main/resources/view/cadastro/cadastroAluno.fxml
+++ b/src/main/resources/view/cadastro/cadastroAluno.fxml
@@ -18,7 +18,7 @@
                     <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                 </HBox.margin>
             </Label>
-            <TextField nodeOrientation="LEFT_TO_RIGHT" prefHeight="24.0" prefWidth="498.0">
+            <TextField fx:id="campoNome" nodeOrientation="LEFT_TO_RIGHT" prefHeight="24.0" prefWidth="498.0">
                 <HBox.margin>
                     <Insets top="5.0" />
                 </HBox.margin>
@@ -31,7 +31,7 @@
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                     </HBox.margin>
                 </Label>
-                <TextField>
+                <TextField fx:id="campoCpf">
                     <HBox.margin>
                         <Insets top="5.0" />
                     </HBox.margin>
@@ -41,7 +41,7 @@
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                     </HBox.margin>
                 </Label>
-                <DatePicker prefHeight="24.0" prefWidth="188.0">
+                <DatePicker fx:id="campoData" prefHeight="24.0" prefWidth="188.0">
                     <HBox.margin>
                         <Insets top="5.0" />
                     </HBox.margin>
@@ -54,7 +54,7 @@
                     <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                 </HBox.margin>
             </Label>
-            <TextField prefHeight="24.0" prefWidth="219.0">
+            <TextField fx:id="campoEmail" prefHeight="24.0" prefWidth="219.0">
                 <HBox.margin>
                     <Insets top="5.0" />
                 </HBox.margin>
@@ -64,7 +64,7 @@
                     <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                 </HBox.margin>
             </Label>
-            <TextField prefHeight="24.0" prefWidth="216.0">
+            <TextField fx:id="campoSenha" prefHeight="24.0" prefWidth="216.0">
                 <HBox.margin>
                     <Insets top="5.0" />
                 </HBox.margin>
@@ -77,7 +77,7 @@
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                     </HBox.margin>
                 </Label>
-                <ChoiceBox prefWidth="150.0">
+                <ChoiceBox fx:id="campoTurma" prefWidth="150.0">
                     <HBox.margin>
                         <Insets top="5.0" />
                     </HBox.margin>
