--- a/src/main/resources/view/GerenciarProvasView.fxml
+++ b/src/main/resources/view/GerenciarProvasView.fxml
@@ -15,12 +15,12 @@
                         <Label fx:id="titleLabel" alignment="BASELINE_RIGHT" layoutX="168.0" layoutY="4.0" text="Gerenciador de Provas" textAlignment="CENTER" />
                     </children>
                 </AnchorPane>
-                <TableView fx:id="tabelaProfessores" layoutX="14.0" layoutY="43.0" prefHeight="257.0" prefWidth="427.0">
+                <TableView fx:id="tabelaProvas" layoutX="14.0" layoutY="43.0" prefHeight="257.0" prefWidth="427.0">
                     <columns>
-                        <TableColumn prefWidth="75.0" text="ID" />
-                        <TableColumn prefWidth="75.0" text="Título" />
-                        <TableColumn prefWidth="75.0" text="Data" />
-                        <TableColumn prefWidth="75.0" text="Tipo" />
+                        <TableColumn fx:id="colunaId" prefWidth="75.0" text="ID" />
+                        <TableColumn fx:id="colunaTitulo" prefWidth="75.0" text="Título" />
+                        <TableColumn fx:id="colunaData" prefWidth="75.0" text="Data" />
+                        <TableColumn fx:id="colunaTipo" prefWidth="75.0" text="Tipo" />
                     </columns>
                     <columnResizePolicy>
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
