--- a/src/main/resources/view/cadastro/cadastroProva.fxml
+++ b/src/main/resources/view/cadastro/cadastroProva.fxml
@@ -17,7 +17,7 @@
       <HBox prefHeight="41.0" prefWidth="569.0">
          <children>
             <Label text="Titulo : " />
-            <TextField prefHeight="24.0" prefWidth="510.0">
+            <TextField fx:id="campoTitulo" prefHeight="24.0" prefWidth="510.0">
                <HBox.margin>
                   <Insets bottom="5.0" />
                </HBox.margin>
@@ -27,19 +27,19 @@
       <HBox prefHeight="122.0" prefWidth="569.0">
          <children>
             <Label text="Descriçao :" />
-            <TextArea prefHeight="140.0" prefWidth="488.0" />
+            <TextArea fx:id="campoDescricao" prefHeight="140.0" prefWidth="488.0" />
          </children>
       </HBox>
       <HBox prefHeight="82.0" prefWidth="569.0">
          <children>
             <Label text="Data : " />
-            <DatePicker prefHeight="24.0" prefWidth="248.0" />
+            <DatePicker fx:id="campoData" prefHeight="24.0" prefWidth="248.0" />
             <Label text="Duraçao : ">
                <HBox.margin>
                   <Insets left="10.0" />
                </HBox.margin>
             </Label>
-            <TextField prefHeight="24.0" prefWidth="200.0" />
+            <TextField fx:id="campoDuracao" prefHeight="24.0" prefWidth="200.0" />
          </children>
          <VBox.margin>
             <Insets top="5.0" />
@@ -52,7 +52,7 @@
                   <Insets top="5.0" />
                </HBox.margin>
             </Label>
-            <RadioButton mnemonicParsing="false" text="Remoto">
+            <RadioButton fx:id="btRemoto" mnemonicParsing="false" text="Remoto">
                <HBox.margin>
                   <Insets left="20.0" top="5.0" />
                </HBox.margin>
@@ -60,7 +60,7 @@
                   <ToggleGroup fx:id="tipoProva" />
                </toggleGroup>
             </RadioButton>
-            <RadioButton mnemonicParsing="false" text="Presencial" toggleGroup="$tipoProva">
+            <RadioButton fx:id="btPresencial" mnemonicParsing="false" text="Presencial" toggleGroup="$tipoProva">
                <HBox.margin>
                   <Insets left="20.0" top="5.0" />
                </HBox.margin>
