--- a/src/main/resources/view/cadastro/cadastroTurma.fxml
+++ b/src/main/resources/view/cadastro/cadastroTurma.fxml
@@ -2,45 +2,24 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="450.0" prefWidth="750.0" style="-fx-background-color: #f0f2f5;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.cadastro.CadastroTurmaController">
-    <children>
-        <Label layoutX="316.0" layoutY="35.0" text="Cadastro de Turma">
-            <font>
-                <Font name="System Bold" size="24.0" />
-            </font>
-        </Label>
-        <Button fx:id="voltarButton" layoutX="24.0" layoutY="35.0" mnemonicParsing="false" onAction="#cancelar" prefHeight="30.0" prefWidth="80.0" text="Voltar" />
 
-        <TableView fx:id="tabelaAlunos" layoutX="125.0" layoutY="85.0" prefHeight="300.0" prefWidth="600.0" AnchorPane.bottomAnchor="65.0" AnchorPane.leftAnchor="125.0" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="85.0">
-            <columns>
-                <TableColumn fx:id="colunaId" prefWidth="40.0" text="Id" />
-                <TableColumn fx:id="colunaNome" prefWidth="120.0" text="Nome" />
-                <TableColumn fx:id="colunaCpf" prefWidth="100.0" text="Cpf" />
-                <TableColumn fx:id="colunaEmail" prefWidth="130.0" text="E-mail" />
-                <TableColumn fx:id="colunaNascimento" prefWidth="110.0" text="Data de nascimento" />
-                <TableColumn fx:id="colunaTurma" prefWidth="80.0" text="Turma" />
-            </columns>
-        </TableView>
-
-        <VBox alignment="CENTER" layoutX="24.0" layoutY="145.0" spacing="10.0">
-            <children>
-                <Label text="admin" textFill="#555555">
-                    <font>
-                        <Font name="System Bold" size="18.0" />
-                    </font>
-                </Label>
-                <Button fx:id="sairButton" mnemonicParsing="false" prefHeight="30.0" prefWidth="80.0" text="Sair" />
-            </children>
-        </VBox>
-
-        <Button fx:id="novoButton" layoutX="125.0" layoutY="401.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="129.0" text="Adicionar  Aluno" />
-        <Button fx:id="editarButton" layoutX="645.0" layoutY="401.0" mnemonicParsing="false" onAction="#cadastrar" prefHeight="30.0" prefWidth="80.0" text="Cadastrar" />
-        <Button fx:id="excluirButton" layoutX="535.0" layoutY="401.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="80.0" text="Excluir" />
-    </children>
+<AnchorPane prefHeight="233.0" prefWidth="335.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.cadastro.CadastroTurmaController">
+   <children>
+      <AnchorPane layoutY="14.0" prefHeight="24.0" prefWidth="335.0" style="-fx-background-color: #B0C4DE;">
+         <children>
+            <Label layoutX="135.0" layoutY="4.0" text="Nova Turma" />
+         </children>
+      </AnchorPane>
+      <Label layoutX="14.0" layoutY="65.0" text="Nome da Turma:" />
+      <Label layoutX="14.0" layoutY="107.0" text="Professor:" />
+      <Label layoutX="14.0" layoutY="143.0" text="ID da Turma:" />
+      <TextField fx:id="campoNome" layoutX="112.0" layoutY="61.0" />
+      <TextField fx:id="campoProfessor" layoutX="112.0" layoutY="103.0" />
+      <TextField fx:id="campoId" layoutX="112.0" layoutY="139.0" />
+      <Button layoutX="22.0" layoutY="194.0" mnemonicParsing="false" onAction="#handleCancelar" text="Cancelar" />
+      <Button layoutX="249.0" layoutY="194.0" mnemonicParsing="false" onAction="#handleCadastrar" text="Cadastrar" />
+   </children>
 </AnchorPane>
